Issue fix: multiple UI issues, popup header back button alignment fixed

--- a/src/app/content-details/content-details.page.scss
+++ b/src/app/content-details/content-details.page.scss
@@ -173,7 +173,7 @@
 }
 
 // **** iOS
-sb-back-transparent-ios {
+.sb-back-transparent-ios {
   width: 50px;
   min-height: 100px;
   background: transparent;
